[lworld] VM flag PrintInlineLayout doesn't work anymore

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • None
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      The VM flag PrintInlineLayout (which prints layout of primitive classes instances and classes with flattenable fields) stopped working after the new field layout code has been pushed.

      It's a simple omission in the test controlling the printing.

            Assignee:
            Frederic Parain
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: