8257446: [lworld] VM flag PrintInlineLayout doesn't work anymore

Reviewed-by: hseigel